 ══════════
  July 19th, 2020
 ══════════
  Main App (v3.6.3.1)
  * FIXED: Code merge reversions.

  Action App (v3.6.3.1)
  * FIXED: Code merge reversions.

  Zone App (v3.6.3.1)
  * FIXED: Code merge reversions.

  Echo Device (v3.6.3.1)
  * FIXED: Code merge reversions.

  WebSocket  Device (v3.6.1.1)
  * FIXED: Code merge reversions.

  Server (v2.5.1)
  * UPDATED: Minor tweaks to Amazon login flow (Still can't fix issues for UK users yet).
_____________________________________

 ══════════
  July 15th, 2020
 ══════════
  Main App (v3.6.3.0)
  * UPDATED: Device Support table updates
  * FIXED: Stopped constant spamming of the logs when the cookie was cleared or expired.

  Action App (v3.6.3.0)
  * FIXED: Error java.lang.NullPointerException: Cannot get property 'actionApp' on null object.

  Zone App (v3.6.3.0)
  * FIXED: Error java.lang.NullPointerException: Cannot get property 'ZoneApp' on null object.

  Echo Device (v3.6.3.0)
  * FIXED: Error java.lang.NullPointerException: Cannot get property 'echoDevice' on null object.
  * FIXED: alexaPlaylists length > 1024 error on Hubitat. #329
  * ADDED: New attribute for lastAnnouncement text @mayhew132 #333

  WebSocket  Device (v3.6.1.0)
  * FIXED: Error java.lang.NullPointerException: Cannot get property 'wsDevice' on null object.

  Server (v2.5.0)
  * UPDATED: Fixes for Amazon login flow/verifications changes.
  * FIXED: Bug fixes.
_____________________________________

 ══════════
  April 22nd, 2020
 ══════════
  Main App (v3.6.2.0)
  * ADDED: More Device Identifier
  * ADDED: Amazon.fr locale support (@Adrew)
  * UPDATED: Cleaned up some of the location events to stop spaming the mobile app events.

  Action App (v3.6.2.0)
  * FIXED: Minor bugs squashed.
  * ADDED: Support for Change in btDevicesPaired attribute.
  * ADDED: New repeat count setting to limit repeat until actions.
  * UPDATED: Cleaned up some of the location events to stop spaming the mobile app events.

  Zone App (v3.6.2.0)