@@ -11,13 +11,13 @@
             "ver": "3.6.3.1"
         },
         "echoDevice": {
-            "ver": "3.6.3.1"
+            "ver": "3.6.3.2"
         },
         "wsDevice": {
             "ver": "3.3.1.1"
         },
         "server": {
-            "ver": "2.5.0"
+            "ver": "2.6.0"
         }
     },
     "amazonDomains": [
